# image_snapshotter_ros

./: README.md
.github/workflows/: ci.yml
image_snapshotter/: CMakeLists.txt  package.xml
image_snapshotter/src/: image_snapshotter.cpp
image_snapshotter_interfaces/: CMakeLists.txt  package.xml
image_snapshotter_interfaces/srv/: GetStill.srv
