<?xml version="1.0"?>
<package format="3">
  <name>image_snapshotter</name>
  <version>0.0.0</version>
  <description>Node for getting stills from compressed image topics.</description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>image_snapshotter_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rmw</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
